--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR"> <!-- Defini o idioma correto para SEO -->
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#00d400" />
+
+    <!-- 🔹 Meta Tags para SEO -->
+    <meta name="description" content="MaxFibra - Internet de Alta Velocidade. Conheça os melhores planos de fibra óptica para sua casa ou empresa." />
+    <meta name="keywords" content="internet fibra, planos de internet, MaxFibra, Wi-Fi, internet rápida, conexão estável, banda larga" />
+    <meta name="author" content="MaxFibra" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- 🔹 Open Graph (Para redes sociais: Facebook, WhatsApp) -->
+    <meta property="og:title" content="MaxFibra - Internet de Alta Velocidade" />
+    <meta property="og:description" content="Os melhores planos de internet para você. Assine agora e tenha a melhor conexão." />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:url" content="https://maxfibraltda.com.br" />
+    <meta property="og:type" content="website" />
+
+    <!-- 🔹 Twitter Card (Para compartilhamento no Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="MaxFibra - Internet de Alta Velocidade" />
+    <meta name="twitter:description" content="Conheça os melhores planos de internet fibra óptica e tenha conexão estável e rápida." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/preview.png" />
+
+    <!-- 🔹 Ícones e Manifest -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- 🔹 Título do Site -->
+    <title>MaxFibra - Internet de Alta Velocidade</title>
   </head>
+  
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>⚠️ Você precisa habilitar o JavaScript para rodar este site corretamente.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
