--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR"> <!-- Defini o idioma correto para SEO -->
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
     <meta name="theme-color" content="#00d400" />
 
     <meta http-equiv="Cache-Control" content="max-age=31536000, immutable">
